--- a/index.html
+++ b/index.html
@@ -3,82 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summit Serenity Retreat - Coming Soon</title>
-    <meta name="description" content="Summit Serenity Retreat - Colorado mountain rental property coming soon">
+    <title>Summit Serenity Retreat - Colorado Mountain Cabin</title>
+    <meta name="description" content="Summit Serenity Retreat - Luxury mountain cabin rental in Colorado">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="background">
-        <div class="mountain-backdrop"></div>
-        <div class="fog fog-1"></div>
-        <div class="fog fog-2"></div>
-        <div class="fog fog-3"></div>
+    <div class="hero-background">
+        <img src="https://images.unsplash.com/photo-1449158743715-0a90ebb6d2d8?q=80&w=2940&auto=format&fit=crop" alt="Mountain Cabin" class="hero-image">
+        <div class="hero-overlay"></div>
     </div>
 
     <div class="container">
         <div class="content">
             <div class="logo-section">
-                <div class="mountain-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 120">
-                        <path d="M10,100 L50,30 L90,60 L130,10 L170,50 L190,100 Z" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-                        <circle cx="130" cy="10" r="3" fill="currentColor"/>
-                    </svg>
-                </div>
                 <h1 class="logo">Summit Serenity</h1>
-                <div class="logo-underline"></div>
                 <p class="logo-subtitle">RETREAT</p>
             </div>
 
             <div class="tagline">
-                <p class="description">Escape to the Colorado Mountains</p>
-                <p class="subdescription">Where peaks meet peace</p>
+                <p class="description">Modern Luxury in the Colorado Mountains</p>
             </div>
 
             <div class="features">
-                <div class="feature">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-                        <polyline points="9 22 9 12 15 12 15 22"></polyline>
-                    </svg>
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                            <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                        </svg>
+                    </div>
                     <span>Luxury Cabin</span>
                 </div>
-                <div class="feature">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
-                        <polyline points="2 17 12 22 22 17"></polyline>
-                        <polyline points="2 12 12 17 22 12"></polyline>
-                    </svg>
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M3 20h18"></path>
+                            <path d="M4 20L12 4l8 16"></path>
+                            <path d="M8.5 20L12 12l3.5 8"></path>
+                        </svg>
+                    </div>
                     <span>Mountain Views</span>
                 </div>
-                <div class="feature">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2z"></path>
-                        <path d="M12 6v6l4 2"></path>
-                    </svg>
-                    <span>Peaceful Escape</span>
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
+                            <polyline points="2 17 12 22 22 17"></polyline>
+                            <polyline points="2 12 12 17 22 12"></polyline>
+                        </svg>
+                    </div>
+                    <span>Forest Setting</span>
                 </div>
             </div>
 
-            <div class="message">
-                <h2 class="coming-soon">Coming Soon</h2>
-                <p class="launch-text">Your mountain sanctuary awaits</p>
-            </div>
-
-            <div class="contact">
-                <p class="contact-label">Questions?</p>
+            <div class="cta-section">
+                <div class="status-badge">Coming Soon</div>
+                <p class="contact-text">Inquiries welcome</p>
                 <a href="mailto:info@summitserenityretreat.com" class="email-link">info@summitserenityretreat.com</a>
             </div>
-        </div>
-
-        <div class="floating-elements">
-            <div class="leaf leaf-1">❅</div>
-            <div class="leaf leaf-2">❅</div>
-            <div class="leaf leaf-3">❅</div>
-            <div class="leaf leaf-4">❅</div>
-            <div class="leaf leaf-5">❅</div>
         </div>
     </div>
 </body>
