Fix layout and upgrade to modern luxury cabin: content overlays image, high-end cabin photo, better mobile visibility

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="hero-background">
-        <img src="https://images.unsplash.com/photo-1449158743715-0a90ebb6d2d8?q=80&w=2940&auto=format&fit=crop" alt="Mountain Cabin" class="hero-image">
+        <img src="https://images.unsplash.com/photo-1542718610-a1d656d1884c?q=80&w=2940&auto=format&fit=crop" alt="Modern Mountain Cabin" class="hero-image">
         <div class="hero-overlay"></div>
     </div>
 
