--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 </div>
                 <div class="feature-item">
                     <div class="feature-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M3 20h18"></path>
-                            <path d="M4 20L12 4l8 16"></path>
-                            <path d="M8.5 20L12 12l3.5 8"></path>
+                            <path d="M5 20L12 8l7 12"></path>
+                            <path d="M7.5 20L12 12l4.5 8"></path>
                         </svg>
                     </div>
                     <span>Mountain Views</span>
@@ -50,9 +50,8 @@
                 <div class="feature-item">
                     <div class="feature-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
-                            <polyline points="2 17 12 22 22 17"></polyline>
-                            <polyline points="2 12 12 17 22 12"></polyline>
+                            <path d="M12 2L8 8L12 10L8 14L12 16L8 22"></path>
+                            <path d="M12 2L16 8L12 10L16 14L12 16L16 22"></path>
                         </svg>
                     </div>
                     <span>Forest Setting</span>
