--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                 <p class="description">Modern Luxury in the Colorado Mountains</p>
             </div>
 
+            <div class="cta-section">
+                <button onclick="openModal()" class="signup-button">Get Notified</button>
+                <p class="contact-text">Be the first to know when reservations open</p>
+            </div>
+
             <div class="features">
                 <div class="feature-item">
                     <div class="feature-icon">
@@ -66,12 +71,6 @@
                     </div>
                     <span>Forest Setting</span>
                 </div>
-            </div>
-
-            <div class="cta-section">
-                <div class="status-badge">Coming Soon</div>
-                <p class="contact-text">Sign up for early updates</p>
-                <button onclick="openModal()" class="signup-button">Get Notified</button>
             </div>
         </div>
     </div>
