Polish design with crisper typography and icons
- Add Cormorant Garamond serif font for elegant headings
- Refine icon styling with thinner strokes
- Add feature subtitles for more detail
- Add gold divider accent to logo section
- Improve spacing and shadow refinements
- Keep color palette and modal fade-in animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GX8B4F0TDD"></script>
@@ -30,6 +30,7 @@
         <div class="content">
             <div class="logo-section">
                 <h1 class="logo">Summit Serenity</h1>
+                <div class="logo-divider"></div>
                 <p class="logo-subtitle">RETREAT</p>
             </div>
 
@@ -45,31 +46,40 @@
             <div class="features">
                 <div class="feature-item">
                     <div class="feature-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                             <polyline points="9 22 9 12 15 12 15 22"></polyline>
                         </svg>
                     </div>
-                    <span>Luxury Cabin</span>
+                    <div class="feature-text">
+                        <span class="feature-title">Luxury Cabin</span>
+                        <span class="feature-subtitle">Premium Amenities</span>
+                    </div>
                 </div>
                 <div class="feature-item">
                     <div class="feature-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M3 20h18"></path>
-                            <path d="M5 20L12 8l7 12"></path>
-                            <path d="M7.5 20L12 12l4.5 8"></path>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M8 3l4 8 5-5 5 15H2L8 3z"></path>
                         </svg>
                     </div>
-                    <span>Mountain Views</span>
+                    <div class="feature-text">
+                        <span class="feature-title">Mountain Views</span>
+                        <span class="feature-subtitle">Panoramic Vistas</span>
+                    </div>
                 </div>
                 <div class="feature-item">
                     <div class="feature-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M12 2L8 8L12 10L8 14L12 16L8 22"></path>
-                            <path d="M12 2L16 8L12 10L16 14L12 16L16 22"></path>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 2v1"></path>
+                            <path d="M12 21v1"></path>
+                            <path d="M12 6a5 5 0 0 1 5 5c0 2.5-2.5 5-5 8-2.5-3-5-5.5-5-8a5 5 0 0 1 5-5z"></path>
+                            <circle cx="12" cy="11" r="1"></circle>
                         </svg>
                     </div>
-                    <span>Forest Setting</span>
+                    <div class="feature-text">
+                        <span class="feature-title">Forest Setting</span>
+                        <span class="feature-subtitle">Private & Secluded</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -162,4 +172,3 @@
     </script>
 </body>
 </html>
-
