--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
     </script>
 </head>
 <body>
+    <!-- Header -->
+    <header class="header">
+        <div class="header-container">
+            <a href="#" class="header-brand">
+                <span class="header-name">Summit Serenity</span>
+            </a>
+            <nav class="header-nav">
+                <a href="#" class="nav-link">About</a>
+                <a href="#" class="nav-link">Location</a>
+                <button onclick="openModal()" class="nav-cta">Get Notified</button>
+            </nav>
+        </div>
+    </header>
+
     <div class="hero-background">
         <img src="https://images.unsplash.com/photo-1542718610-a1d656d1884c?q=80&w=2940&auto=format&fit=crop" alt="Modern Mountain Cabin" class="hero-image">
         <div class="hero-overlay"></div>
@@ -84,6 +98,26 @@
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <span class="footer-name">Summit Serenity Retreat</span>
+                    <span class="footer-location">Colorado Mountains</span>
+                </div>
+                <div class="footer-links">
+                    <a href="#" onclick="openModal(); return false;">Contact</a>
+                    <a href="#" onclick="openModal(); return false;">Reservations</a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p class="footer-copyright">&copy; 2024 Summit Serenity Retreat. All rights reserved.</p>
+                <p class="footer-owner">A property of Makoba Business LLC</p>
+            </div>
+        </div>
+    </footer>
 
     <!-- Email Signup Modal -->
     <div id="signupModal" class="modal" onclick="closeModalOnBackdrop(event)">
@@ -167,6 +201,16 @@
         document.addEventListener('keydown', (event) => {
             if (event.key === 'Escape') {
                 closeModal();
+            }
+        });
+
+        // Header scroll effect
+        window.addEventListener('scroll', () => {
+            const header = document.querySelector('.header');
+            if (window.scrollY > 50) {
+                header.classList.add('scrolled');
+            } else {
+                header.classList.remove('scrolled');
             }
         });
     </script>
