Add contact info to footer - info@summitserenityretreat.com

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 <div class="footer-links">
                     <a href="#" onclick="openModal(); return false;">Contact</a>
                     <a href="#" onclick="openModal(); return false;">Reservations</a>
+                    <a href="mailto:info@summitserenityretreat.com" class="footer-email">info@summitserenityretreat.com</a>
                 </div>
             </div>
             <div class="footer-bottom">
